Fixed overlapping tour date class names

--- a/css/components.css
+++ b/css/components.css
@@ -576,7 +576,7 @@
 }
 
 /* Date */
-.td-date {
+.td-time {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -603,7 +603,7 @@
 }
 
 /* Venue */
-.td-info {
+.td-location {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
